# cc-sessions-viewer

./: .gitignore  CHANGELOG.md  CHAT_BOX_DESIGN.md  CLAUDE.md  README.ja.md  README.md  README.zh-CN.md  commitlint.config.cjs  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.codex/: config.toml
docs/: codex-chat-plan.md  issue-1-in-app-llm-chat-plan.md  release-ci.md  split-panes-analysis.md
src/: App.vue  api.ts  chatComposerOptions.ts  chatContext.ts  chatPermission.ts  chatSessions.ts  chatSlashActions.ts  chatSystemCommands.ts  chatToolbar.ts  cliEnvStore.ts  codeCopy.ts  codexApplyPatch.ts  desktopPet.ts  export.ts  format.ts  i18n.ts  main.ts  paneActions.ts  panes.ts  pricing.ts  recents.ts  sessionsToolbar.ts  settings.ts  shikiHighlight.ts  sideChat.ts  style.css  tabStatus.ts  terminals.ts  tooltip.ts  turnHookStatus.ts  types.ts  updateCheck.ts  viewHistory.ts  viewTabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_dedup.rs  verify_stats.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_chat.rs  agent_command.rs  bookmarks.rs  claude_config.rs  cli_env.rs  git.rs  lib.rs  menu.rs  pty.rs  trash.rs  tray.rs  tray_windows.rs  turn.rs  turn_signal_hook.cjs  types.rs  usage_api.rs  util.rs  watch.rs  worktrees.rs
src-tauri/src/agents/: agy.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/stats/: aggregate.rs  classifier.rs  mod.rs  pricing.rs  shell.rs  stream.rs  tray.rs  types.rs
test/: api.test.ts  chatContext.test.ts  (+16 more)
(+67 files in other folders)
